Add Currency logic